# core3

./: Cargo.toml  README.md
src/: lib.rs
src/io/: cursor.rs  error.rs  mod.rs  traits.rs  util.rs
tests/: io.rs
